--- a/style.css
+++ b/style.css
@@ -158,9 +158,37 @@ body {
   font-weight: 700;
   /* border: 2px solid red; */
 }
-
-#rahman {
-  grid-row-span: ;
+/* start featurd section */
+.featured {
+  /* border: 2px solid black; */
+  display: flex;
+  max-width: 1100px;
+  height: auto;
+  margin: 0 auto;
+  justify-content: space-between;
+  align-items: center;
+}
+.featured-img-inner {
+  max-width: 404px;
+  height: auto;
+}
+.featured-title {
+  font-size: 2.375rem;
+  font-weight: 700;
+  color: rgb(10, 8, 38);
+}
+.featured-description {
+  font-size: 1rem;
+  font-weight: 700;
+  color: rgb(108, 108, 108);
+}
+.btn-third {
+  padding: 10px 24px 10px 24px;
+  background: rgb(224, 44, 109);
+  color: rgb(255, 255, 255);
+  border: none;
+  font-size: 1rem;
+  font-weight: 700;
 }
 
 /* responsive for mobile */
@@ -238,5 +266,16 @@ body {
     font-size: 0.875rem;
     font-weight: 400;
     color: rgb(120, 120, 133);
+  }
+  .featured {
+    flex-direction: column-reverse;
+  }
+  .featured-img-inner {
+    width: 100%;
+    height: auto;
+  }
+  .featured-container {
+    text-align: center;
+    margin-bottom: 30px;
   }
 }
