--- a/style.css
+++ b/style.css
@@ -190,6 +190,37 @@ body {
   font-size: 1rem;
   font-weight: 700;
 }
+/* footer */
+.footer {
+  max-width: 100%;
+  height: auto;
+  background-color: #0a0826;
+  margin-top: 60px;
+  padding: 15px;
+}
+.footer-text-container {
+  margin: 20px auto;
+  text-align: center;
+  /* background-color: wheat; */
+}
+.footer-title {
+  color: white;
+  font-size: 1.5rem;
+  font-weight: 700;
+}
+.footer-description {
+  color: #d9dbe1;
+  font-size: 0.875rem;
+  font-weight: 700;
+}
+.footer-icon {
+  /* border: 2px solid white; */
+  text-align: center;
+}
+.messi {
+  color: white;
+  margin-right: 5px;
+}
 
 /* responsive for mobile */
 @media screen and (max-width: 576px) {
